# MyElephant

./: .gitignore  LICENSE  README.md  pyproject.toml
cchess/: board.py  piece.py
data/: test_list.csv
my_elephant/: __init__.py
my_elephant/chess/: __init__.py  board_utils.py  features.py  mcts_prior_shaping.py  plane_extras.py  rationale.py  session.py  xml_samples.py
my_elephant/data_prep/: __init__.py  imsa_catalog.py  split_manifest.py
my_elephant/datasets/: __init__.py  batching.py
my_elephant/training/: __init__.py  mcts_engine.py  play_model_loader.py  play_policy_torch.py  policy_data.py  policy_eval_http.py  policy_eval_worker.py  policy_torch.py  selfplay_ga_main.py  selfplay_sample.py  train_policy_torch.py
